[package]
name = "mondayio-compat"
readme = "README.md"
version = "0.2.2"
authors = ["ChiHai <ihciah@gmail.com>", "XuShuai <dyxushuai@gmail.com>", "Dawei Hu <hoodavy@gmail.com>"]
categories = ["asynchronous", "network-programming"]
description = "A compat wrapper for monoio."
edition = "2021"
keywords = ["runtime", "iouring", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
monoio = { package = "mondayio", path = "../monoio", version = "0.2.4", default-features = false, features = ["legacy"] }
reusable-box-future = "0.2"
tokio = { version = "1", default-features = false, features = ["io-util"] }

hyper = { version = "1.1", optional = true }
pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
monoio = { package = "mondayio", version = "0.2.4", path = "../monoio", features = [
    "async-cancel",
    "macros",
] }

[features]
# use nightly only feature flags
unstable = ["monoio/unstable"]
# this is an experimental feature
hyper = ["dep:hyper", "dep:pin-project-lite", "monoio/poll-io"]
